# smaccmpilot-stm32f4

./: .gitignore  .gitmodules  .travis.yml  BuildSystemNotes.md  Config.mk.LP  Config.mk.example  ExtendedKalmanFilter.hs  Kalman.hs  Keys.mk.example  LICENSE  Makefile  Makefile.sandbox  Matrix.hs  PSAS.hs  Quat.hs  README.md  SensorFusionModel.hs  Simulate.hs  SymDiff.hs  Vec3.hs  build.mk  cov-script.sh  gdb-init  gdb-tdesc-cortexm-fpa.xml  gidl-bootstrap.yaml  openocd-stm32f4.cfg  px4ioar_params.txt  quad3dr_params.txt  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.2.yaml  stack-8.0.yaml  stack.mk  stack.yaml  standalone-setup.sh  stm32_flash.ld  symdiff.cabal
apps/sample-rtv-task/: .gitignore  README.md  app.mk  build.mk  find-instrumented.sh  legacy.c  legacy.h  main.c  record_assignment.c  record_assignment.h  sample-rtv-task.cabal  sample-rtv-task.cabal.deprecate
apps/sample-rtv-task/haskell-src/: Checker.hs  CheckerTask.hs  TowerSetup.hs  Types.hs  Variables.hs
apps/sample-rtv-task/legacy/: legacy.c  legacy.h
apps/sample-rtv-task/record_assignment/: record_assignment.c
ivory/: .gitignore  FooBarTasks.hs  GCSTransmitDriver.hs  IvoryHelpers.hs  Main.hs  MotorsOutputType.hs  PositionType.hs  SensorsType.hs  Stabilize.hs  UserInputDecode.hs  UserInputTask.hs  UserInputType.hs  build.mk  claims-table.md  smaccmpilot.cabal  verify.mk
ivory/SMACCMPilot/: Console.hs  Param.hs  SafePack.hs
ivory/SMACCMPilot/Driver/: Gpio.hs
ivory/SMACCMPilot/Flight/: BlinkTask.hs  Control.hs  Stabilize.hs  Types.hs
ivory/SMACCMPilot/Storage/: Partition.hs
ivory/SMACCMPilot/Util/: IvoryCString.hs  IvoryHelpers.hs  Periodic.hs
ivory/Tower/: FooBarAssembly.hs  Test.hs
ivory/ivory/: .gitignore
sample-rtv-task/: build.mk  checker_task.c  legacy.h  main.c  record_assignment.c  sample-rtv-task.cabal
sample-rtv-task/haskell-src/: Checker.hs  TowerSetup.hs  Variables.hs  checker.hs  generate.hs
smaccmpilot/ivory/: GCSTransmit.hs  GCSTransmitDriver.hs  IvoryCString.hs  IvoryFloatHelper.hs  IvoryHelpers.hs  Main.hs  OptFlowType.hs  Position.hs  PositionEstimateType.hs  ServoType.hs  Stabilize.hs  UserInputDecode.hs  UserInputType.hs  build.mk  build.sh  cbmc.sh  ghci.sh  smaccmpilot.cabal
smaccmpilot/ivory/SMACCMPilot/: Param.hs  SafePack.hs
smaccmpilot/ivory/Tower/: Test.hs
src/crypto/smaccm-commsec/: .gitignore  Makefile  smaccm-commsec.cabal
src/flight/: Arm32SizeMap.hs  FlightGen.hs  HILGen.hs  Main.hs  README.md  build.mk  claims-table.md  smaccmpilot.cabal
src/flight/SMACCMPilot/: Console.hs  Flight.hs  Param.hs  SafePack.hs
src/flight/ardupilot/: build.mk
src/flight/src/: apmotors_wrapper.cpp  apmotors_wrapper_stub.cpp  console_prim.cpp  main.cpp  sensors_capture.cpp  userinput_capture.cpp
src/flight/standalone_apahrs/: README.md  build.mk
src/gcs/: .gitignore  Joystick-README.md  Main.hs  Makefile  README  build.mk  commsec-gcs.cabal  commsec-proxy.sh  gcs.sh  gcs.sh.in  ghci.sh
src/gcs/commsec-test/: .gitignore  Main.hs  Makefile  commsec-test.cabal
src/gcs/src/: Commsec.hs  CommsecServer.hs  Main.hs
src/hx-stream/hs/: hx-stream.cabal  hxstream.cabal
src/hx-stream/ivory/: .gitignore  Main.hs  Makefile  ivory-hx-stream.cabal  ivory-hxstream.cabal
src/ivory-bsp-stm32/: .gitignore  ivory-bsp-stm32.cabal
src/ivory-bsp-stm32/support/: stm32_init.c  stm32f4_init.c  stm32f4_init.h
src/ivory-bsp-tests/: ivory-bsp-tests.cabal
src/ivory-bsp-tests/examples/: I2CTest.hs  I2CTestCompiler.hs  LEDBlink.hs  LEDTower.hs  LEDTowerCompiler.hs  MPU6000.hs  MPU6000Tower.hs  MPU6000TowerCompiler.hs  Open407Toy.hs  Platforms.hs  SPITest.hs  SPITestCompiler.hs  SPITower.hs  SPITowerCompiler.hs  SPITypes.hs  UARTStressTest.hs  UARTStressTestCompiler.hs  UARTTest.hs  UARTTower.hs  UARTTowerCompiler.hs
src/ivory-bsp-tests/tests/: CANTest.hs  I2CTest.hs  LEDTest.hs  SPITest.hs  UARTDebug.hs
src/ivory-geo/: Makefile  Makefile.deps  README.md  ivory-geo.cabal
src/ivory-px4-hw/: .gitignore  Makefile  Makefile.deps  README.md  calibration.conf  fmu17.conf  fmu24.conf  ivory-px4-hw.cabal  notes
src/ivory-px4-hw/SMACCMPilot/: Time.hs
src/ivory-px4-hw/copter-motor-test/: Main.hs  Platform.hs
src/ivory-px4-hw/px4-hmc5883l-test/: Main.hs  Platform.hs
src/ivory-px4-hw/px4-mpu6k-test/: Main.hs  Platform.hs
src/ivory-px4-hw/px4-ms5611-test/: Main.hs  Platform.hs
src/ivory-px4-hw/px4ioar-hw-test/: Main.hs
src/ivory-px4-hw/support/: termios_helpers.c  termios_helpers.h
src/ivory-px4-hw/test-client/: hxframing.py  sensorsmonitor-calibration.py  sensorsmonitor.py  util.py
src/ivory-px4-hw/tests/: ADCTest.hs  AllSensorsExtMagTest.hs  AllSensorsTest.hs  AllSensorsTestAADL.hs  BaroTest.hs  CANFragmentTest.hs  CopterMotorTest.hs  CopterMotorTestClient.hs  LIDARTest.hs  MPU6000AADLTest.hs  MPU6000Test.hs  MagTest.hs  PPMInTest.hs  PX4IOPackingTest.hs  PX4IOTest.hs  RGBLEDAADLTest.hs  RGBLEDTest.hs  SensorsMonitor.hs  UbloxGPSTest.hs
src/ivory-px4-tests/: .gitignore  Makefile  default.conf  ivory-px4-tests.cabal  sensorsmonitor.py
src/smaccm-comm-client/: Makefile  Makefile.deps  cabal.config  default.conf  gcs.sh  keyexchange.conf  smaccm-comm-client.cabal  testke.sh
src/smaccm-comm-server/: .gitignore  Makefile  default.conf  smaccm-comm-server.cabal
src/smaccm-commsec/: .gitignore  Makefile  Makefile.deps  smaccm-commsec.cabal
src/smaccm-datalink/: .gitignore  Makefile  Makefile.deps  README.md  default.conf  smaccm-datalink.cabal
src/smaccm-flight/: .gitignore  LICENSE  Makefile  Makefile.deps  README.md  TODO  calibration.conf  fmu17.conf  fmu24.conf  hmc5883l.conf  keys.conf  lidar.conf  odroid.conf  px4flow.conf  smaccm-flight.cabal  telemwatch  tuning.conf
src/smaccm-ins/: .gitignore  LICENSE  Makefile  Makefile.deps  README.md  default.conf  fit-sphere.py  fmu17.conf  fmu24.conf  plotter.py  slice.py  smaccm-ins.cabal
src/smaccm-mavlink/: .gitignore  Makefile  README.md  ghci.sh  regen.sh  smaccm-mavlink.cabal  smaccm-mavlink.cabal.in
src/smaccm-params/: Makefile  smaccm-params.cabal
src/smaccm-shared-comm/: Makefile  smaccm-shared-comm.cabal
(+2026 files in other folders)
