name:                symdiff
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     ExtendedKalmanFilter,
                       Matrix,
                       Quat,
                       SensorFusionModel,
                       Simulate,
                       SymDiff,
                       Vec3
  build-depends:       base >=4.6 && <4.7,
                       containers >=0.5 && <0.6,
                       monadLib >= 3.7 && < 3.8
  default-language:    Haskell2010
  other-extensions:    GeneralizedNewtypeDeriving
