name:                symdiff
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable psas
  main-is:             PSAS.hs
  build-depends:       base >=4.6 && <4.7,
                       ad >=4.2 && <4.3,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       monadLib >= 3.7 && < 3.8,
                       reflection >=1.5 && <1.6
  default-language:    Haskell2010
  other-extensions:    GeneralizedNewtypeDeriving
