name:                smaccmpilot
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          jamesjb@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     SMACCMPilot.Console,

                       SMACCMPilot.Flight.BlinkTask,

                       SMACCMPilot.Flight.GCS.Stream,
                       SMACCMPilot.Flight.GCS.Transmit.MessageDriver,
                       SMACCMPilot.Flight.GCS.Transmit.USARTSender,
                       SMACCMPilot.Flight.GCS.Transmit.Task,
                       SMACCMPilot.Flight.GCS.Receive.Handlers,
                       SMACCMPilot.Flight.GCS.Receive.Task,
                       SMACCMPilot.Flight.GCS.Tower,

                       SMACCMPilot.Flight.Control,
                       SMACCMPilot.Flight.Control.PID,
                       SMACCMPilot.Flight.Control.Stabilize,
                       SMACCMPilot.Flight.Control.Task,

                       SMACCMPilot.Flight.Motors.Task,

                       SMACCMPilot.Flight.Sensors.Task,

                       SMACCMPilot.Flight.Types,
                       SMACCMPilot.Flight.Types.ControlOutput,
                       SMACCMPilot.Flight.Types.GCSStreamTiming,
                       SMACCMPilot.Flight.Types.OptFlow,
                       SMACCMPilot.Flight.Types.PositionEstimate,
                       SMACCMPilot.Flight.Types.Position,
                       SMACCMPilot.Flight.Types.Sensors,
                       SMACCMPilot.Flight.Types.Servos,
                       SMACCMPilot.Flight.Types.UserInput,
                       SMACCMPilot.Flight.Types.FlightMode,

                       SMACCMPilot.Flight.UserInput.Decode,
                       SMACCMPilot.Flight.UserInput.Task,

                       SMACCMPilot.Storage.Partition,

                       SMACCMPilot.Param,
                       SMACCMPilot.SafePack,

                       SMACCMPilot.Util.IvoryCString,
                       SMACCMPilot.Util.IvoryHelpers

  other-modules:       Arm32SizeMap


  build-depends:       base >= 4.6,
                       ivory,
                       monadLib,
                       ivory-lang-c,
                       ivory-lang-opts,
                       ivory-tower,
                       ivory-tower-freertos,
                       ivory-bsp-hwf4wrapper,
                       smaccm-mavlink

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

executable smaccmpilot-gen
  main-is:             Main.hs
  other-modules:       Arm32SizeMap
  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-lang-c,
                       ivory-lang-opts,
                       ivory-tower,
                       ivory-tower-freertos,
                       ivory-bsp-hwf4wrapper,
                       smaccm-mavlink,
                       smaccmpilot

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

