name:                sample-rtv-task
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable sample-rtv-task-checker-gen
  main-is:             Checker.hs
  hs-source-dirs:      haskell-src
  build-depends:       base >= 4.6
                     , ivory
                     , ivory-backend-c
                     , ivory-rtverification
                     , ivory-tower
                     , ivory-tower-freertos
                     , language-c-quote >= 0.5.0
                     , mainland-pretty
                     , srcloc
                     , monadLib
                     , template-haskell >= 2.8
  other-modules:       Variables
                     , TowerSetup
