
name:                smaccmpilot
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          jamesjb@galois.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Stabilize,
                       PositionType,
                       MotorsOutputType,
                       ServoType,
                       SensorsType,
                       UserInputType,
                       GCSTransmitDriver,
                       UserInputDecode,
                       OptFlowType,
                       PositionEstimateType,
                       IvoryHelpers,
                       SMACCMPilot.Driver.I2C,
                       SMACCMPilot.Storage.EEPROM

  build-depends:       base >= 4.6,
                       smaccm-mavlink,
                       ivory

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

executable smaccmpilot-gen
  main-is:             Main.hs
  other-modules:       
  build-depends:       base ==4.6.*,
                       ivory,
                       ivory-lang-c,
                       smaccm-mavlink,
                       smaccmpilot
