name:                smaccmpilot
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     SMACCMPilot.Flight,
                       SMACCMPilot.Flight.Compile,

                       SMACCMPilot.Flight.Platforms,

                       SMACCMPilot.Flight.BlinkTask,

                       SMACCMPilot.Flight.GCS.Stream,
                       SMACCMPilot.Flight.GCS.Transmit.MessageDriver,
                       SMACCMPilot.Flight.GCS.Transmit.Task,
                       SMACCMPilot.Flight.GCS.Receive.Handlers,
                       SMACCMPilot.Flight.GCS.Receive.Task,
                       SMACCMPilot.Flight.GCS.HIL,
                       SMACCMPilot.Flight.GCS.Tower,

                       SMACCMPilot.Flight.Control,
                       SMACCMPilot.Flight.Control.PID,
                       SMACCMPilot.Flight.Control.Stabilize,
                       SMACCMPilot.Flight.Control.Task,

                       SMACCMPilot.Flight.Datalink,
                       SMACCMPilot.Flight.Datalink.AirData,
                       SMACCMPilot.Flight.Datalink.RadioData,
                       -- SMACCMPilot.Flight.Datalink.TestHarness,

                       SMACCMPilot.Flight.Commsec.Commsec
                       SMACCMPilot.Flight.Commsec.Encrypt
                       SMACCMPilot.Flight.Commsec.Decrypt

                       SMACCMPilot.Flight.Motors.Task,
                       SMACCMPilot.Flight.Motors.Mixing,
                       SMACCMPilot.Flight.Motors.Platforms,

                       SMACCMPilot.Flight.Sensors.Task,
                       SMACCMPilot.Flight.Sensors.Platforms,

                       SMACCMPilot.Flight.Types,
                       SMACCMPilot.Flight.Types.ControlOutput,
                       SMACCMPilot.Flight.Types.GCSStreamTiming,
                       SMACCMPilot.Flight.Types.OptFlow,
                       SMACCMPilot.Flight.Types.PositionEstimate,
                       SMACCMPilot.Flight.Types.Position,
                       SMACCMPilot.Flight.Types.Sensors,
                       SMACCMPilot.Flight.Types.Motors,
                       SMACCMPilot.Flight.Types.UserInput,
                       SMACCMPilot.Flight.Types.FlightMode,
                       SMACCMPilot.Flight.Types.DataRate,
                       SMACCMPilot.Flight.Types.RadioStat,
                       SMACCMPilot.Flight.Types.RadioInfo,

                       SMACCMPilot.Flight.UserInput.Decode,
                       SMACCMPilot.Flight.UserInput.Task,

                       SMACCMPilot.Param,
                       SMACCMPilot.Param.Base,
                       SMACCMPilot.Param.Tower,

                       SMACCMPilot.Console,
                       SMACCMPilot.SafePack

  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       ivory-tower,
                       ivory-tower-frontend,
                       ivory-bsp-hwf4wrapper,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-mavlink,
                       shared-smaccmpilot

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

executable flight-gen
  main-is:             FlightGen.hs
  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       ivory-tower,
                       ivory-tower-frontend,
                       ivory-bsp-hwf4wrapper,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-mavlink,
                       shared-smaccmpilot,
                       smaccmpilot

  default-language:    Haskell2010

executable flight-hil-gen
  main-is:             HILGen.hs
  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       ivory-tower,
                       ivory-tower-frontend,
                       ivory-bsp-hwf4wrapper,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-mavlink,
                       smaccmpilot,
                       shared-smaccmpilot

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans


