name:                smaccmpilot
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     SMACCMPilot.Flight,
                       SMACCMPilot.Flight.Core,
                       SMACCMPilot.Flight.Compile,

                       SMACCMPilot.Flight.Platforms,

                       SMACCMPilot.Flight.BlinkTask,
                       SMACCMPilot.Flight.Param,

                       SMACCMPilot.Flight.GCS.Stream,
                       SMACCMPilot.Flight.GCS.Transmit.MessageDriver,
                       SMACCMPilot.Flight.GCS.Transmit.Task,
                       SMACCMPilot.Flight.GCS.Receive.Handlers,
                       SMACCMPilot.Flight.GCS.Receive.Task,
                       SMACCMPilot.Flight.GCS.HIL,
                       SMACCMPilot.Flight.GCS.Tower,

                       SMACCMPilot.Flight.GPS,

                       SMACCMPilot.Flight.Control,
                       SMACCMPilot.Flight.Control.PID,
                       SMACCMPilot.Flight.Control.StatePID,
                       SMACCMPilot.Flight.Control.StateDerivativePID,

                       SMACCMPilot.Flight.Control.Altitude,
                       SMACCMPilot.Flight.Control.Altitude.Estimator,
                       SMACCMPilot.Flight.Control.Altitude.Filter,
                       SMACCMPilot.Flight.Control.Altitude.ThrottleTracker,
                       SMACCMPilot.Flight.Control.Altitude.ThrustPID,
                       SMACCMPilot.Flight.Control.Altitude.PositionPID,
                       SMACCMPilot.Flight.Control.Altitude.ThrottleUI,

                       -- SMACCMPilot.Flight.Control.Attitude,
                       SMACCMPilot.Flight.Control.Attitude.Angle,
                       SMACCMPilot.Flight.Control.Attitude.Stabilize,
                       SMACCMPilot.Flight.Control.Attitude.PitchRoll,

                       SMACCMPilot.Flight.Control.Attitude.YawUI,
                       SMACCMPilot.Flight.Control.Attitude.YawRate,
                       SMACCMPilot.Flight.Control.Attitude.HeadingControl,
                       SMACCMPilot.Flight.Control.Yaw,


                       SMACCMPilot.Flight.Datalink,
                       SMACCMPilot.Flight.Datalink.AirData,
                       SMACCMPilot.Flight.Datalink.RadioData,

                       SMACCMPilot.Flight.Commsec.Commsec
                       SMACCMPilot.Flight.Commsec.Encrypt
                       SMACCMPilot.Flight.Commsec.Decrypt

                       SMACCMPilot.Flight.Motors.Task,
                       SMACCMPilot.Flight.Motors.Mixing,
                       SMACCMPilot.Flight.Motors.Platforms,

                       SMACCMPilot.Flight.Navigation,
                       SMACCMPilot.Flight.Navigation.Position,
                       SMACCMPilot.Flight.Navigation.Velocity,
                       SMACCMPilot.Flight.Navigation.Failsafe,

                       SMACCMPilot.Flight.Recovery,

                       SMACCMPilot.Flight.Sensors.Task,
                       SMACCMPilot.Flight.Sensors.Platforms,

                       SMACCMPilot.Flight.Types,
                       SMACCMPilot.Flight.Types.ControlOutput,
                       SMACCMPilot.Flight.Types.GCSStreamTiming,
                       SMACCMPilot.Flight.Types.GCSStreamStruct,
                       SMACCMPilot.Flight.Types.OptFlow,
                       SMACCMPilot.Flight.Types.Sensors,
                       SMACCMPilot.Flight.Types.Motors,
                       SMACCMPilot.Flight.Types.UserInput,
                       SMACCMPilot.Flight.Types.RadioStat,
                       SMACCMPilot.Flight.Types.RadioInfo,
                       SMACCMPilot.Flight.Types.MaybeFloat,
                       SMACCMPilot.Flight.Types.AltControlDebug,
                       SMACCMPilot.Flight.Types.ControlLaw,
                       SMACCMPilot.Flight.Types.ArmedMode,
                       SMACCMPilot.Flight.Types.ControlSource,
                       SMACCMPilot.Flight.Types.ThrottleMode,
                       SMACCMPilot.Flight.Types.ControlLawRequest,
                       SMACCMPilot.Flight.Types.YawMode,
                       SMACCMPilot.Flight.Types.AttControlDebug,
                       SMACCMPilot.Flight.Types.PosControlDebug,
                       SMACCMPilot.Flight.Types.ControlSetpoint,
                       SMACCMPilot.Flight.Types.UISource,
                       SMACCMPilot.Flight.Types.NavCommand,
                       SMACCMPilot.Flight.Types.NavLaw,
                       SMACCMPilot.Flight.Types.EnableDisable,
                       SMACCMPilot.Flight.Types.CommsecStatus,

                       SMACCMPilot.Flight.UserInput.PPM,
                       SMACCMPilot.Flight.UserInput.PPM.ArmingMachine,
                       SMACCMPilot.Flight.UserInput.PPM.Decode,
                       SMACCMPilot.Flight.UserInput.PPM.ModeSwitch,
                       SMACCMPilot.Flight.UserInput.ControlLaw,
                       SMACCMPilot.Flight.UserInput.ControlLaw.ArmingRequest,
                       SMACCMPilot.Flight.UserInput.ControlLaw.ModeRequest,
                       SMACCMPilot.Flight.UserInput.MAVLink,
                       SMACCMPilot.Flight.UserInput.Mux,
                       SMACCMPilot.Flight.UserInput,

                       SMACCMPilot.Param,
                       SMACCMPilot.Param.Base,
                       SMACCMPilot.Param.TowerTypes,
                       SMACCMPilot.Param.Tower,

                       SMACCMPilot.SafePack

  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       tower              >= 0.8,
                       tower-frontend     >= 0.8,
                       tower-statemachine >= 0.8,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-shared-comm,
                       smaccm-mavlink

  default-language:    Haskell2010
  ghc-options:         -Wall

executable flight-gen
  main-is:             FlightGen.hs
  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       tower              >= 0.8,
                       tower-frontend     >= 0.8,
                       tower-statemachine >= 0.8,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-mavlink,
                       smaccm-shared-comm,
                       smaccmpilot

  default-language:    Haskell2010
  ghc-options:         -Wall

executable flight-hil-gen
  main-is:             HILGen.hs
  build-depends:       base ==4.6.*,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-opts,
                       ivory-hw,
                       ivory-bitdata,
                       tower              >= 0.8,
                       tower-frontend     >= 0.8,
                       tower-statemachine >= 0.8,
                       ivory-bsp-stm32f4,
                       ivory-px4-hw,
                       ivory-hxstream,
                       smaccm-mavlink,
                       smaccm-shared-comm,
                       smaccmpilot

  default-language:    Haskell2010
  ghc-options:         -Wall



