name:                commsec-gcs
version:             0.1.0.0
synopsis:            Commsec server to interact with mavproxy.py.

license:             BSD3
license-file:      ../../LICENSE
author:              Lee Pike
maintainer:          leepike@galois.com
copyright:           Galois, Inc.
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Commsec,
                       Mavlink.Parser
  build-depends:       base,
                       serialport,
                       network,
                       network-simple,
                       bytestring,
                       unix,
                       cipher-aes >= 0.2.2,
                       crypto-cipher-types,
                       cereal,
                       pretty-hex,
                       hxstream,
                       smaccm-mavlink

-- executable commsec-gcs
--   hs-source-dirs:      src
--   main-is:             CommsecServer.hs
--   other-modules:       Commsec,
--                        Mavlink.Parser,
--                        Mavlink.CRC

--   build-depends:       base,
--                        serialport,
--                        network,
--                        network-simple,
--                        bytestring,
--                        unix,
--                        cipher-aes >= 0.2.2,
--                        crypto-cipher-types,
--                        cereal,
--                        pretty-hex,
--                        hxstream

  ghc-options:         -Wall -O -threaded -rtsopts -with-rtsopts=-N3
