name:                commsec-gcs
version:             0.1.0.0
synopsis:            Commsec server to interact with mavproxy.py.

license:             BSD3
license-file:        ../../LICENSE
author:              Lee Pike
maintainer:          leepike@galois.com
copyright:           Galois, Inc.
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Commsec,
                       CommsecServer,
                       Mavlink.Parser
  build-depends:       base,
                       serialport,
                       network,
                       network-simple >= 0.3.0,
                       bytestring,
                       unix,
                       cipher-aes >= 0.2.2,
                       crypto-cipher-types,
                       cereal,
                       hxstream,
                       smaccm-mavlink,
                       stm,
                       monadLib,
                       shared-smaccmpilot

executable commsec-gcs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Commsec,
                       CommsecServer,
                       Mavlink.Parser
  build-depends:       base,
                       serialport,
                       network,
                       network-simple >= 0.3.0,
                       bytestring,
                       unix,
                       cipher-aes >= 0.2.2,
                       crypto-cipher-types,
                       cereal,
                       hxstream,
                       stm,
                       monadLib,
                       smaccm-mavlink,
                       shared-smaccmpilot,
                       commsec-gcs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N3
